--- a/pcgrr/inst/templates/pcgr_flexdb/flexdb_scna_tier1.Rmd
+++ b/pcgrr/inst/templates/pcgr_flexdb/flexdb_scna_tier1.Rmd
@@ -17,14 +17,16 @@ num_genes <- 0
 if(NROW(pcg_report$content$cna$disp$tier1) > 0){
   num_genes <- length(unique(pcg_report$content$cna$disp$tier1$SYMBOL))
 }
-flexdashboard::valueBox(num_genes, color = pcg_report$metadata$color_value_box, icon = "fa-dna")
+flexdashboard::valueBox(
+  num_genes, 
+  color = pcg_report$settings$conf$visual_reporting$color_value_box, icon = "fa-dna")
 
 ```
 
 ### Biomarker aberrations
 
 ```{r}
-flexdashboard::valueBox(length(unique(pcg_report$content$cna$disp$tier1$SEGMENT)), color = pcg_report$metadata$color_value_box, icon = "fa-dna")
+flexdashboard::valueBox(length(unique(pcg_report$content$cna$disp$tier1$SEGMENT)), color = pcg_report$settings$conf$visual_reporting$color_value_box, icon = "fa-dna")
 ```
 
 
@@ -34,7 +36,7 @@ flexdashboard::valueBox(length(unique(pcg_report$content$cna$disp$tier1$SEGMENT)
 entries_diagnostic <- NROW(pcg_report$content$cna$clin_eitem$query_ttype$diagnostic$A_B)
 flexdashboard::valueBox(entries_diagnostic, color = ifelse(entries_diagnostic > 0,
                         "#00a65a",
-                        pcg_report$metadata$color_none), icon = "fa-file-prescription")
+                        pcg_report$settings$conf$visual_reporting$color_none), icon = "fa-file-prescription")
 ```
 
 ### Prognostic evidence items
@@ -43,7 +45,7 @@ flexdashboard::valueBox(entries_diagnostic, color = ifelse(entries_diagnostic > 
 entries_prognostic <- NROW(pcg_report$content$cna$clin_eitem$query_ttype$prognostic$A_B)
 flexdashboard::valueBox(entries_prognostic, color = ifelse(entries_prognostic > 0,
                         "#00a65a",
-                        pcg_report$metadata$color_none), icon = "fa-file-prescription")
+                        pcg_report$settings$conf$visual_reporting$color_none), icon = "fa-file-prescription")
 ```
 
 ### Predictive evidence items
@@ -52,7 +54,7 @@ flexdashboard::valueBox(entries_prognostic, color = ifelse(entries_prognostic > 
 entries_predictive <- NROW(pcg_report$content$cna$clin_eitem$query_ttype$predictive$A_B)
 flexdashboard::valueBox(entries_predictive, color = ifelse(entries_predictive > 0,
                         "#00a65a",
-                        pcg_report$metadata$color_none), icon = "fa-file-prescription")
+                        pcg_report$settings$conf$visual_reporting$color_none), icon = "fa-file-prescription")
 ```
 
 
@@ -76,15 +78,27 @@ variants_tier1 <- dplyr::bind_rows(
 variants_tier1_shared <- crosstalk::SharedData$new(variants_tier1)
 crosstalk::bscols(
   list(
-    crosstalk::filter_select("CANCER_TYPE", "Cancer type", variants_tier1_shared, ~CANCER_TYPE),
-    crosstalk::filter_select("CLINICAL_SIGNIFICANCE", "Clinical significance", variants_tier1_shared, ~CLINICAL_SIGNIFICANCE),
-    crosstalk::filter_slider("RATING", "Rating", variants_tier1_shared, ~RATING, min = 0, max = 5, step = 1, ticks = T)
+    crosstalk::filter_select(
+      "BM_CANCER_TYPE", "Cancer type", 
+      variants_tier1_shared, ~BM_CANCER_TYPE),
+    crosstalk::filter_select(
+      "BM_CLINICAL_SIGNIFICANCE", "Clinical significance", 
+      variants_tier1_shared, ~BM_CLINICAL_SIGNIFICANCE),
+    crosstalk::filter_slider(
+      "RATING", "Rating", variants_tier1_shared, 
+      ~RATING, min = 0, max = 5, step = 1, ticks = T)
 
   ),
   list(
-    crosstalk::filter_select("EVIDENCE_TYPE", "Evidence type", variants_tier1_shared, ~EVIDENCE_TYPE),
-    crosstalk::filter_select("EVIDENCE_LEVEL", "Evidence level", variants_tier1_shared, ~EVIDENCE_LEVEL),
-    crosstalk::filter_select("THERAPEUTIC_CONTEXT", "Therapeutic context", variants_tier1_shared, ~THERAPEUTIC_CONTEXT)
+    crosstalk::filter_select(
+      "BM_EVIDENCE_TYPE", "Evidence type", 
+      variants_tier1_shared, ~BM_EVIDENCE_TYPE),
+    crosstalk::filter_select(
+      "BM_EVIDENCE_LEVEL", "Evidence level", 
+      variants_tier1_shared, ~BM_EVIDENCE_LEVEL),
+    crosstalk::filter_select(
+      "BM_THERAPEUTIC_CONTEXT", "Therapeutic context", 
+      variants_tier1_shared, ~BM_THERAPEUTIC_CONTEXT)
   )
 )
 
@@ -117,7 +131,7 @@ variants_tier1_shared |>
                  scrollX = "900px",
                   columnDefs = list(list(width = '90px', targets = c(1,2,3,4,5,6))),
                              dom = 'Bfrtip')) |>
-  DT::formatStyle('EVIDENCE_LEVEL', 
+  DT::formatStyle('BM_EVIDENCE_LEVEL', 
                  backgroundColor = DT::styleEqual(c('A: Validated','A: FDA/NCCN/ELN guidelines','B: Clinical evidence','B1: Clinical evidence: late trials','B2: Clinical evidence: early trials','C: Case study','D: Preclinical evidence','E: Indirect evidence'), c("#009E73","#009E73","#56B4E9", "#56B4E9","#56B4E9","#0072B2","#E69F00", "#F0E442")))
 
 ```
