--- a/pcgrr/inst/templates/pcgr_flexdb/flexdb_snv_tier2.Rmd
+++ b/pcgrr/inst/templates/pcgr_flexdb/flexdb_snv_tier2.Rmd
@@ -14,7 +14,7 @@ flexdashboard::valueBox("TIER 2", caption = NULL, color = '#000000', icon = NULL
 ### Biomarker genes
 
 ```{r}
-# flexdashboard::valueBox(stringr::str_replace_all(pcg_report$content$value_box$tier2,"Tier 2 variants:\n",""), color = pcg_report$metadata$color_value_box, icon = "fa-dna")
+# flexdashboard::valueBox(stringr::str_replace_all(pcg_report$content$value_box$tier2,"Tier 2 variants:\n",""), color = pcg_report$settings$conf$visual_reporting$color_value_box, icon = "fa-dna")
 
 tier2_evidence_items <- dplyr::bind_rows(pcg_report$content$snv_indel$clin_eitem$query_ttype$diagnostic$C_D_E,
                                        pcg_report$content$snv_indel$clin_eitem$other_ttype$diagnostic$A_B,
@@ -25,14 +25,14 @@ tier2_evidence_items <- dplyr::bind_rows(pcg_report$content$snv_indel$clin_eitem
 
 
 
-flexdashboard::valueBox(length(unique(tier2_evidence_items$SYMBOL)), color = pcg_report$metadata$color_value_box)
+flexdashboard::valueBox(length(unique(tier2_evidence_items$SYMBOL)), color = pcg_report$settings$conf$visual_reporting$color_value_box)
 
 ```
 
 ### Biomarker variants
 
 ```{r}
-flexdashboard::valueBox(pcg_report$content$snv_indel$v_stat$n_tier2, color = pcg_report$metadata$color_value_box, icon = "fa-dna")
+flexdashboard::valueBox(pcg_report$content$snv_indel$vstats$n_tier2, color = pcg_report$settings$conf$visual_reporting$color_value_box, icon = "fa-dna")
 ```
 
 
@@ -43,7 +43,7 @@ entries_diagnostic <- NROW(pcg_report$content$snv_indel$clin_eitem$query_ttype$d
                       NROW(pcg_report$content$snv_indel$clin_eitem$other_ttype$diagnostic$A_B)
 flexdashboard::valueBox(entries_diagnostic, color = ifelse(entries_diagnostic > 0,
                         "#00a65a",
-                        pcg_report$metadata$color_none), icon = "fa-file-prescription")
+                        pcg_report$settings$conf$visual_reporting$color_none), icon = "fa-file-prescription")
 ```
 
 ### Prognostic evidence items
@@ -53,7 +53,7 @@ entries_prognostic <- NROW(pcg_report$content$snv_indel$clin_eitem$query_ttype$p
                       NROW(pcg_report$content$snv_indel$clin_eitem$other_ttype$prognostic$A_B)
 flexdashboard::valueBox(entries_prognostic, color = ifelse(entries_prognostic > 0,
                         "#00a65a",
-                        pcg_report$metadata$color_none), icon = "fa-file-prescription")
+                        pcg_report$settings$conf$visual_reporting$color_none), icon = "fa-file-prescription")
 ```
 
 ### Predictive evidence items
@@ -63,7 +63,7 @@ entries_predictive <- NROW(pcg_report$content$snv_indel$clin_eitem$query_ttype$p
                       NROW(pcg_report$content$snv_indel$clin_eitem$other_ttype$predictive$A_B)
 flexdashboard::valueBox(entries_predictive, color = ifelse(entries_predictive > 0,
                         "#00a65a",
-                        pcg_report$metadata$color_none), icon = "fa-file-prescription")
+                        pcg_report$settings$conf$visual_reporting$color_none), icon = "fa-file-prescription")
 ```
 
 
@@ -74,7 +74,7 @@ Row
 
 <br><br>
 
-```{r table_browse_tier2, echo=F, results = "asis", eval = pcg_report$content$snv_indel$v_stat$n_tier2 > 0}
+```{r table_browse_tier2, echo=F, results = "asis", eval = pcg_report$content$snv_indel$vstats$n_tier2 > 0}
 
 cat('\nEvidence items associated with variants in TIER 2 (right panel) can be interactively explored according to various criteria\n:')
 
@@ -85,22 +85,22 @@ variants_tier2 <- dplyr::bind_rows(
   pcg_report[['content']][['snv_indel']][['clin_eitem']][['other_ttype']][['diagnostic']][['A_B']],
   pcg_report[['content']][['snv_indel']][['clin_eitem']][['other_ttype']][['predictive']][['A_B']],
   pcg_report[['content']][['snv_indel']][['clin_eitem']][['other_ttype']][['prognostic']][['A_B']]) |>
-  dplyr::arrange(EVIDENCE_LEVEL, RATING)
+  dplyr::arrange(BM_EVIDENCE_LEVEL, RATING)
 
 variants_tier2_shared <- crosstalk::SharedData$new(variants_tier2)
 crosstalk::bscols(
   list(
-    crosstalk::filter_select("CANCER_TYPE", "Cancer type", variants_tier2_shared, ~CANCER_TYPE),
-    crosstalk::filter_select("CLINICAL_SIGNIFICANCE", "Clinical significance", variants_tier2_shared, ~CLINICAL_SIGNIFICANCE),
-    crosstalk::filter_select("EVIDENCE_LEVEL", "Evidence level", variants_tier2_shared, ~EVIDENCE_LEVEL),
+    crosstalk::filter_select("BM_CANCER_TYPE", "Cancer type", variants_tier2_shared, ~BM_CANCER_TYPE),
+    crosstalk::filter_select("BM_CLINICAL_SIGNIFICANCE", "Clinical significance", variants_tier2_shared, ~BM_CLINICAL_SIGNIFICANCE),
+    crosstalk::filter_select("BM_EVIDENCE_LEVEL", "Evidence level", variants_tier2_shared, ~BM_EVIDENCE_LEVEL),
     crosstalk::filter_slider("RATING", "Rating", variants_tier2_shared, ~RATING, min = 0, max = 5, step = 1, ticks = T)
 
   ),
   list(
     crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_tier2_shared, ~CONSEQUENCE),
-    crosstalk::filter_select("EVIDENCE_TYPE", "Evidence type", variants_tier2_shared, ~EVIDENCE_TYPE),
+    crosstalk::filter_select("BM_EVIDENCE_TYPE", "Evidence type", variants_tier2_shared, ~BM_EVIDENCE_TYPE),
     crosstalk::filter_select("BIOMARKER_MAPPING", "Biomarker mapping", variants_tier2_shared, ~BIOMARKER_MAPPING),
-    crosstalk::filter_select("THERAPEUTIC_CONTEXT", "Therapeutic context", variants_tier2_shared, ~THERAPEUTIC_CONTEXT)
+    crosstalk::filter_select("BM_THERAPEUTIC_CONTEXT", "Therapeutic context", variants_tier2_shared, ~BM_THERAPEUTIC_CONTEXT)
   )
 )
 
@@ -108,19 +108,19 @@ htmltools::br()
 ```
 
 
-```{r biomarker_note2, echo=F, results = "asis", include = pcg_report$content$snv_indel$v_stat$n_tier2 > 0}
+```{r biomarker_note2, echo=F, results = "asis", include = pcg_report$content$snv_indel$vstats$n_tier2 > 0}
 
 cat('<b>NOTE:</b> Reported biomarkers in CIViC/CGI are mapped at different resolutions (i.e. filter <b>Biomarker mapping</b>). The accuracy of a match between variants in the tumor sample and the reported biomarkers will vary accordingly (highlighted by gene symbols with different color backgrounds):\n\n')
 
 cat('<ul><li>Biomarker match at the <mark style="background-color:black; font-weight:bold; color:white">exact variant/codon level</mark></li>')
-cat(paste0('<br><li>Biomarker match at the <mark style="background-color:', pcg_report[['metadata']][['color_palette']][['warning']][['values']][1],'; color:white; font-weight:bold">exon/gene level</mark></li></ul>\n'))
+cat(paste0('<br><li>Biomarker match at the <mark style="background-color:', pcg_report$settings$conf$visual_reporting$color_palette[['warning']][['values']][1],'; color:white; font-weight:bold">exon/gene level</mark></li></ul>\n'))
 
 htmltools::br()
 
 ```
 
 
-```{r tier2_missing_filters, echo=F, results = 'asis', eval = pcg_report$content$snv_indel$v_stat$n_tier2 == 0}
+```{r tier2_missing_filters, echo=F, results = 'asis', eval = pcg_report$content$snv_indel$vstats$n_tier2 == 0}
 cat('\n*  <i> <font style="font-size: 110%"><b>No</b> variants of potential clinical significance found.</font></i>', sep = '\n')
 cat('\n')
 ```
@@ -130,7 +130,7 @@ cat('\n')
 
 <br><br>
 
-```{r table_tier2, eval = pcg_report$content$snv_indel$v_stat$n_tier2 > 0}
+```{r table_tier2, eval = pcg_report$content$snv_indel$vstats$n_tier2 > 0}
 
 variants_tier2_shared |>
  DT::datatable(escape = F, 
@@ -145,16 +145,16 @@ variants_tier2_shared |>
                  scrollX = "900px",
                   columnDefs = list(list(width = '90px', targets = c(1,2,3,4,5,6))),
                                dom = 'Bfrtip')) |>
-  DT::formatStyle('EVIDENCE_LEVEL', 
+  DT::formatStyle('BM_EVIDENCE_LEVEL', 
                  backgroundColor = DT::styleEqual(c('A: Validated','A: FDA/NCCN/ELN guidelines','B: Clinical evidence','B1: Clinical evidence: late trials','B2: Clinical evidence: early trials','C: Case study','D: Preclinical evidence','E: Indirect evidence'), c("#009E73","#009E73","#56B4E9", "#56B4E9","#56B4E9","#0072B2","#E69F00", "#F0E442"))) |>
   DT::formatStyle(color="white", "SYMBOL", "BIOMARKER_MAPPING", fontWeight = 'bold', `text-align` = 'center',
                   backgroundColor = DT::styleEqual(c('exact','codon','exon','gene'), 
-                                                   c('#000','#000',pcg_report[['metadata']][['color_palette']][['warning']][['values']][1],
-                                                     pcg_report[['metadata']][['color_palette']][['warning']][['values']][1])))
+                                                   c('#000','#000',pcg_report$settings$conf$visual_reporting$color_palette[['warning']][['values']][1],
+                                                     pcg_report$settings$conf$visual_reporting$color_palette[['warning']][['values']][1])))
 
 ```
 
-```{r tier2_missing_data, echo=F, results = 'asis', eval = pcg_report$content$snv_indel$v_stat$n_tier2 == 0}
+```{r tier2_missing_data, echo=F, results = 'asis', eval = pcg_report$content$snv_indel$vstats$n_tier2 == 0}
 cat('\n*  <i> <font style="font-size: 110%"><b>No</b> variants of potential clinical significance found.</font></i>', sep = '\n')
 cat('\n')
 ```
