--- a/pcgrr/inst/templates/pcgr_flexdb/flexdb_snv_tier3.Rmd
+++ b/pcgrr/inst/templates/pcgr_flexdb/flexdb_snv_tier3.Rmd
@@ -38,15 +38,15 @@ flexdashboard::valueBox("TIER 3", caption = NULL, color = '#000000', icon = NULL
 ### Total variants
 
 ```{r}
-flexdashboard::valueBox(pcg_report$content$snv_indel$v_stat$n_tier3, 
-                        color = pcg_report$metadata$color_value_box, icon = "fa-dna")
+flexdashboard::valueBox(pcg_report$content$snv_indel$vstats$n_tier3, 
+                        color = pcg_report$settings$conf$visual_reporting$color_value_box, icon = "fa-dna")
 ```
 
 ### Variants in proto-oncogenes
 
 ```{r oncogene_variants, echo = F}
 flexdashboard::valueBox(as.character(n_tier3_oncogene), 
-                        color = pcg_report$metadata$color_value_box, icon = "fa-dna")
+                        color = pcg_report$settings$conf$visual_reporting$color_value_box, icon = "fa-dna")
 ```
 
 
@@ -55,13 +55,13 @@ flexdashboard::valueBox(as.character(n_tier3_oncogene),
 ```{r tsgene_variants, echo = F}
 
 
-flexdashboard::valueBox(as.character(n_tier3_tsgene), color = pcg_report$metadata$color_value_box, icon = "fa-dna")
+flexdashboard::valueBox(as.character(n_tier3_tsgene), color = pcg_report$settings$conf$visual_reporting$color_value_box, icon = "fa-dna")
 ```
 
 ### Variants in genes with dual roles
 
 ```{r dual_role_variants, echo = F}
-flexdashboard::valueBox(as.character(n_tier3_dualrole), color = pcg_report$metadata$color_value_box, icon = "fa-dna")
+flexdashboard::valueBox(as.character(n_tier3_dualrole), color = pcg_report$settings$conf$visual_reporting$color_value_box, icon = "fa-dna")
 ```
 
 
@@ -72,7 +72,7 @@ Row
 
 <br>
 
-```{r table_browse_tier3, echo=F, results = "asis", eval = pcg_report$content$snv_indel$v_stat$n_tier3 > 0}
+```{r table_browse_tier3, echo=F, results = "asis", eval = pcg_report$content$snv_indel$vstats$n_tier3 > 0}
 
 tier3_vars <- dplyr::bind_rows(pcg_report[['content']][['snv_indel']][["disp"]][['tier3']][['tumor_suppressor']],
                               pcg_report[['content']][['snv_indel']][["disp"]][['tier3']][['proto_oncogene']])
@@ -107,7 +107,7 @@ crosstalk::bscols(
 ```
 
 
-```{r tier3_missing_filters, echo=F, results = 'asis', eval = pcg_report$content$snv_indel$v_stat$n_tier3 == 0}
+```{r tier3_missing_filters, echo=F, results = 'asis', eval = pcg_report$content$snv_indel$vstats$n_tier3 == 0}
 cat('\n*  <i> <font style="font-size: 110%"><b>No</b> other variants found in proto-oncogenes or tumor suppressor genes.</font></i>', sep = '\n')
 cat('\n')
 ```
@@ -118,7 +118,7 @@ cat('\n')
 <br>
 
 
-```{r table_tier3, eval = pcg_report$content$snv_indel$v_stat$n_tier3 > 0}
+```{r table_tier3, eval = pcg_report$content$snv_indel$vstats$n_tier3 > 0}
 
 
 dt <- DT::datatable(variants_tier3_shared, escape=F,extensions=c("Buttons","Responsive"), 
@@ -146,7 +146,7 @@ dt
 
 ```
 
-```{r tier3_missing_data, echo=F, results = 'asis', eval = pcg_report$content$snv_indel$v_stat$n_tier3 == 0}
+```{r tier3_missing_data, echo=F, results = 'asis', eval = pcg_report$content$snv_indel$vstats$n_tier3 == 0}
 cat('\n*  <i> <font style="font-size: 110%"><b>No</b> other variants found in proto-oncogenes or tumor suppressor genes.</font></i>', sep = '\n')
 cat('\n')
 ```
