--- a/pcgrr/inst/templates/pcgr_flexdb/flexdb_snv_tier4.Rmd
+++ b/pcgrr/inst/templates/pcgr_flexdb/flexdb_snv_tier4.Rmd
@@ -35,25 +35,25 @@ flexdashboard::valueBox("TIER 4", caption = NULL, color = '#000000', icon = NULL
 ### Total variants
 
 ```{r}
-flexdashboard::valueBox(pcg_report$content$snv_indel$v_stat$n_tier4, color = pcg_report$metadata$color_value_box, icon = "fa-dna")
+flexdashboard::valueBox(pcg_report$content$snv_indel$vstats$n_tier4, color = pcg_report$settings$conf$visual_reporting$color_value_box, icon = "fa-dna")
 ```
 
 ### SNVs
 
 ```{r}
-flexdashboard::valueBox(as.character(n_tier4_snv), color = pcg_report$metadata$color_value_box, icon = "fa-dna")
+flexdashboard::valueBox(as.character(n_tier4_snv), color = pcg_report$settings$conf$visual_reporting$color_value_box, icon = "fa-dna")
 ```
 
 ### InDels
 
 ```{r}
-flexdashboard::valueBox(as.character(n_tier4_indel), color = pcg_report$metadata$color_value_box, icon = "fa-dna")
+flexdashboard::valueBox(as.character(n_tier4_indel), color = pcg_report$settings$conf$visual_reporting$color_value_box, icon = "fa-dna")
 ```
 
 ### Block substitutions
 
 ```{r}
-flexdashboard::valueBox(as.character(n_tier4_block), color = pcg_report$metadata$color_value_box, icon = "fa-dna")
+flexdashboard::valueBox(as.character(n_tier4_block), color = pcg_report$settings$conf$visual_reporting$color_value_box, icon = "fa-dna")
 ```
 
 
@@ -65,7 +65,7 @@ Row
 
 <br>
 
-```{r table_browse_tier4, echo=F, results = "asis", eval = pcg_report$content$snv_indel$v_stat$n_tier4 > 0}
+```{r table_browse_tier4, echo=F, results = "asis", eval = pcg_report$content$snv_indel$vstats$n_tier4 > 0}
 
 if(NROW(pcg_report[['content']][['snv_indel']][["disp"]][['tier4']]) > 2000){
   cat('<b>NOTE - only considering top 2000 variants (ranked according to Open Targets phenotype association score) </b><br>',sep="\n")
@@ -95,7 +95,7 @@ crosstalk::bscols(
 ```
 
 
-```{r tier4_missing_filters, echo=F, results = 'asis', eval = pcg_report$content$snv_indel$v_stat$n_tier4 == 0}
+```{r tier4_missing_filters, echo=F, results = 'asis', eval = pcg_report$content$snv_indel$vstats$n_tier4 == 0}
 cat('\n*  <i> <font style="font-size: 110%"><b>No</b> other protein-coding variants found.</font></i>', sep = '\n')
 cat('\n')
 ```
@@ -105,7 +105,7 @@ cat('\n')
 
 <br>
 
-```{r table_tier4, eval = pcg_report$content$snv_indel$v_stat$n_tier4 > 0}
+```{r table_tier4, eval = pcg_report$content$snv_indel$vstats$n_tier4 > 0}
 
 DT::datatable(variants_tier4_shared, escape=F,extensions=c("Buttons","Responsive"), 
 options=list(buttons = c('csv','excel'), 
@@ -122,7 +122,7 @@ options=list(buttons = c('csv','excel'),
   
 ```
 
-```{r tier4_missing_data, echo=F, results = 'asis', eval = pcg_report$content$snv_indel$v_stat$n_tier4 == 0}
+```{r tier4_missing_data, echo=F, results = 'asis', eval = pcg_report$content$snv_indel$vstats$n_tier4 == 0}
 cat('\n*  <i> <font style="font-size: 110%"><b>No</b> other protein-coding variants found.</font></i>', sep = '\n')
 cat('\n')
 ```
