--- a/pcgrr/inst/templates/pcgr_rmarkdown/snv_biomarker.Rmd
+++ b/pcgrr/inst/templates/pcgr_rmarkdown/snv_biomarker.Rmd
@@ -11,19 +11,19 @@ n_all <- NROW(all_evidence_items)
 n_entries_diagnostic <- 0
 if(NROW(all_evidence_items) > 0){
   n_entries_diagnostic <- all_evidence_items |>
-    dplyr::filter(EVIDENCE_TYPE == "Diagnostic") |>
+    dplyr::filter(BM_EVIDENCE_TYPE == "Diagnostic") |>
     nrow()
 }
 n_entries_prognostic <- 0
 if(NROW(all_evidence_items) > 0){
   n_entries_prognostic <- all_evidence_items |>
-    dplyr::filter(EVIDENCE_TYPE == "Prognostic") |>
+    dplyr::filter(BM_EVIDENCE_TYPE == "Prognostic") |>
     nrow()
 }
 n_entries_predictive <- 0
 if(NROW(all_evidence_items) > 0){
   n_entries_predictive <- all_evidence_items |>
-    dplyr::filter(EVIDENCE_TYPE == "Predictive") |>
+    dplyr::filter(BM_EVIDENCE_TYPE == "Predictive") |>
     nrow()
 }
 
@@ -39,7 +39,7 @@ A list of __ALL__ associations between variants in the tumor sample and known bi
 cat('<b>NOTE:</b> Reported biomarkers in CIViC/CGI are mapped at different resolutions (i.e. filter <b>Biomarker mapping</b>). The accuracy of a match between variants in the tumor sample and the reported biomarkers will vary accordingly (highlighted by gene symbols with different color backgrounds):\n\n')
 
 cat('<ul><li>Biomarker match at the <mark style="background-color:black; font-weight:bold; color:white">exact variant/codon level</mark></li>')
-cat(paste0('<br><li>Biomarker match at the <mark style="background-color:', pcg_report[['metadata']][['color_palette']][['warning']][['values']][1],'; color:white; font-weight:bold">exon/gene level</mark></li></ul>\n'))
+cat(paste0('<br><li>Biomarker match at the <mark style="background-color:', pcg_report$settings$conf$visual_reporting$color_palette[['warning']][['values']][1],'; color:white; font-weight:bold">exon/gene level</mark></li></ul>\n'))
 
 htmltools::br()
 ```
@@ -56,17 +56,17 @@ variants_any <- dplyr::bind_rows(
 variants_all_shared <- crosstalk::SharedData$new(variants_any)
 crosstalk::bscols(
   list(
-    crosstalk::filter_select("CANCER_TYPE", "Cancer type", variants_all_shared, ~CANCER_TYPE),
-    crosstalk::filter_select("CLINICAL_SIGNIFICANCE", "Clinical significance", variants_all_shared, ~CLINICAL_SIGNIFICANCE),
-    crosstalk::filter_select("EVIDENCE_LEVEL", "Evidence level", variants_all_shared, ~EVIDENCE_LEVEL),
+    crosstalk::filter_select("BM_CANCER_TYPE", "Cancer type", variants_all_shared, ~BM_CANCER_TYPE),
+    crosstalk::filter_select("BM_CLINICAL_SIGNIFICANCE", "Clinical significance", variants_all_shared, ~BM_CLINICAL_SIGNIFICANCE),
+    crosstalk::filter_select("BM_EVIDENCE_LEVEL", "Evidence level", variants_all_shared, ~BM_EVIDENCE_LEVEL),
     crosstalk::filter_slider("RATING", "Rating", variants_all_shared, ~RATING, min = 0, max = 5, step = 1, ticks = T)
 
   ),
   list(
     crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_all_shared, ~CONSEQUENCE),
-    crosstalk::filter_select("EVIDENCE_TYPE", "Evidence type", variants_all_shared, ~EVIDENCE_TYPE),
+    crosstalk::filter_select("BM_EVIDENCE_TYPE", "Evidence type", variants_all_shared, ~BM_EVIDENCE_TYPE),
     crosstalk::filter_select("BIOMARKER_MAPPING", "Biomarker mapping", variants_all_shared, ~BIOMARKER_MAPPING),
-    crosstalk::filter_select("THERAPEUTIC_CONTEXT", "Therapeutic context", variants_all_shared, ~THERAPEUTIC_CONTEXT)
+    crosstalk::filter_select("BM_THERAPEUTIC_CONTEXT", "Therapeutic context", variants_all_shared, ~BM_THERAPEUTIC_CONTEXT)
   )
 )
 
@@ -89,7 +89,7 @@ variants_all_shared |>
                 options = list(pageLength = 8, 
                                buttons = c('csv','excel'), 
                                dom = 'Bfrtip')) |>
-  DT::formatStyle('EVIDENCE_LEVEL', 
+  DT::formatStyle('BM_EVIDENCE_LEVEL', 
                   backgroundColor = DT::styleEqual(
                     c('A: Validated',
                       'A: FDA/NCCN/ELN guidelines',
@@ -104,7 +104,7 @@ variants_all_shared |>
                       "#E69F00", "#F0E442"))) |>
   DT::formatStyle(color="white", "SYMBOL", "BIOMARKER_MAPPING", fontWeight = 'bold', `text-align` = 'center',
                   backgroundColor = DT::styleEqual(c('exact','codon','exon','gene'), 
-                                                   c('#000','#000',pcg_report[['metadata']][['color_palette']][['warning']][['values']][1], pcg_report[['metadata']][['color_palette']][['warning']][['values']][1])))
+                                                   c('#000','#000',pcg_report$settings$conf$visual_reporting$color_palette[['warning']][['values']][1], pcg_report$settings$conf$visual_reporting$color_palette[['warning']][['values']][1])))
 
 ```
 
