--- a/pcgrr/inst/templates/pcgr_rmarkdown/snv_tier1.Rmd
+++ b/pcgrr/inst/templates/pcgr_rmarkdown/snv_tier1.Rmd
@@ -9,12 +9,12 @@
 <br><br>
 
 
-```{r biomarker_note1, echo=F, results = "asis", include = pcg_report$content$snv_indel$v_stat$n_tier1 > 0}
+```{r biomarker_note1, echo=F, results = "asis", include = pcg_report$content$snv_indel$vstats$n_tier1 > 0}
 
 cat('<b>NOTE:</b> Reported biomarkers in CIViC/CGI are mapped at different resolutions (i.e. filter <b>Biomarker mapping</b>). The accuracy of a match between variants in the tumor sample and the reported biomarkers will vary accordingly (highlighted by gene symbols with different color backgrounds):\n\n')
 
 cat('<ul><li>Biomarker match at the <mark style="background-color:black; font-weight:bold; color:white">exact variant/codon level</mark></li>')
-cat(paste0('<br><li>Biomarker match at the <mark style="background-color:', pcg_report[['metadata']][['color_palette']][['warning']][['values']][1],'; color:white; font-weight:bold">exon/gene level</mark></li></ul>\n'))
+cat(paste0('<br><li>Biomarker match at the <mark style="background-color:', pcg_report$settings$conf$visual_reporting$color_palette[['warning']][['values']][1],'; color:white; font-weight:bold">exon/gene level</mark></li></ul>\n'))
 
 htmltools::br()
 ```
@@ -58,16 +58,16 @@ if(missing_tier1_items[['predictive']] == F |
 variants_tier1_predictive_shared <- crosstalk::SharedData$new(pcg_report[['content']][['snv_indel']][['clin_eitem']][['query_ttype']][['predictive']][['A_B']])
 crosstalk::bscols(
   list(
-    crosstalk::filter_select("CANCER_TYPE", "Cancer type", variants_tier1_predictive_shared, ~CANCER_TYPE),
-    crosstalk::filter_select("CLINICAL_SIGNIFICANCE", "Clinical significance", variants_tier1_predictive_shared, ~CLINICAL_SIGNIFICANCE),
-    crosstalk::filter_select("EVIDENCE_LEVEL", "Evidence level", variants_tier1_predictive_shared, ~EVIDENCE_LEVEL),
+    crosstalk::filter_select("BM_CANCER_TYPE", "Cancer type", variants_tier1_predictive_shared, ~BM_CANCER_TYPE),
+    crosstalk::filter_select("BM_CLINICAL_SIGNIFICANCE", "Clinical significance", variants_tier1_predictive_shared, ~BM_CLINICAL_SIGNIFICANCE),
+    crosstalk::filter_select("BM_EVIDENCE_LEVEL", "Evidence level", variants_tier1_predictive_shared, ~BM_EVIDENCE_LEVEL),
     crosstalk::filter_slider("RATING", "Rating", variants_tier1_predictive_shared, ~RATING, min = 0, max = 5, step = 1, ticks = T)
 
   ),
   list(
     crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_tier1_predictive_shared, ~CONSEQUENCE),
     crosstalk::filter_select("BIOMARKER_MAPPING", "Biomarker mapping", variants_tier1_predictive_shared, ~BIOMARKER_MAPPING),
-    crosstalk::filter_select("THERAPEUTIC_CONTEXT", "Therapeutic context", variants_tier1_predictive_shared, ~THERAPEUTIC_CONTEXT)
+    crosstalk::filter_select("BM_THERAPEUTIC_CONTEXT", "Therapeutic context", variants_tier1_predictive_shared, ~BM_THERAPEUTIC_CONTEXT)
   )
 )
 
@@ -77,7 +77,7 @@ htmltools::br()
 
 DT::datatable(variants_tier1_predictive_shared,  escape=F,extensions=c("Buttons","Responsive"), 
               options=list(buttons = c('csv','excel'),  scrollCollapse=T, dom = 'Bfrtip')) |>
-  DT::formatStyle('EVIDENCE_LEVEL', 
+  DT::formatStyle('BM_EVIDENCE_LEVEL', 
                   backgroundColor = DT::styleEqual(c('A: Validated','A: FDA/NCCN/ELN guidelines',
                                                      'B: Clinical evidence','B1: Clinical evidence: late trials',
                                                      'B2: Clinical evidence: early trials','C: Case study',
@@ -85,7 +85,7 @@ DT::datatable(variants_tier1_predictive_shared,  escape=F,extensions=c("Buttons"
                                                    c("#009E73","#009E73","#56B4E9", "#56B4E9","#56B4E9","#0072B2","#E69F00", "#F0E442"))) |>
   DT::formatStyle(color="white", "SYMBOL", "BIOMARKER_MAPPING", fontWeight = 'bold', `text-align` = 'center',
                   backgroundColor = DT::styleEqual(c('exact','codon','exon','gene'), 
-                                                   c('#000','#000',pcg_report[['metadata']][['color_palette']][['warning']][['values']][1], pcg_report[['metadata']][['color_palette']][['warning']][['values']][1])))
+                                                   c('#000','#000',pcg_report$settings$conf$visual_reporting$color_palette[['warning']][['values']][1], pcg_report$settings$conf$visual_reporting$color_palette[['warning']][['values']][1])))
 
 
 
@@ -120,11 +120,11 @@ variants_tier1_prognostic_shared <- crosstalk::SharedData$new(pcg_report[['conte
 crosstalk::bscols(
   list(
     crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_tier1_prognostic_shared, ~CONSEQUENCE),
-    crosstalk::filter_select("CANCER_TYPE", "Cancer type", variants_tier1_prognostic_shared, ~CANCER_TYPE),
-    crosstalk::filter_select("CLINICAL_SIGNIFICANCE", "Clinical significance", variants_tier1_prognostic_shared, ~CLINICAL_SIGNIFICANCE)
+    crosstalk::filter_select("BM_CANCER_TYPE", "Cancer type", variants_tier1_prognostic_shared, ~BM_CANCER_TYPE),
+    crosstalk::filter_select("BM_CLINICAL_SIGNIFICANCE", "Clinical significance", variants_tier1_prognostic_shared, ~BM_CLINICAL_SIGNIFICANCE)
   ),
   list(
-    crosstalk::filter_select("EVIDENCE_LEVEL", "Evidence level", variants_tier1_prognostic_shared, ~EVIDENCE_LEVEL),
+    crosstalk::filter_select("BM_EVIDENCE_LEVEL", "Evidence level", variants_tier1_prognostic_shared, ~BM_EVIDENCE_LEVEL),
     crosstalk::filter_select("BIOMARKER_MAPPING", "Biomarker mapping", variants_tier1_prognostic_shared, ~BIOMARKER_MAPPING),
     crosstalk::filter_slider("RATING", "Rating", variants_tier1_prognostic_shared, ~RATING, min = 0, max = 5, step = 1, ticks = T)
 
@@ -136,7 +136,7 @@ htmltools::br()
 
 DT::datatable(variants_tier1_prognostic_shared, escape=F,extensions=c("Buttons","Responsive"), 
               options=list(buttons = c('csv','excel'), scrollCollapse=T, dom = 'Bfrtip')) |>
-  DT::formatStyle('EVIDENCE_LEVEL', 
+  DT::formatStyle('BM_EVIDENCE_LEVEL', 
                   backgroundColor = DT::styleEqual(c('A: Validated','A: FDA/NCCN/ELN guidelines',
                                                      'B: Clinical evidence','B1: Clinical evidence: late trials',
                                                      'B2: Clinical evidence: early trials','C: Case study',
@@ -144,7 +144,7 @@ DT::datatable(variants_tier1_prognostic_shared, escape=F,extensions=c("Buttons",
                                                    c("#009E73","#009E73","#56B4E9", "#56B4E9","#56B4E9","#0072B2","#E69F00", "#F0E442"))) |>
    DT::formatStyle(color="white", "SYMBOL", "BIOMARKER_MAPPING", fontWeight = 'bold', `text-align` = 'center',
                   backgroundColor = DT::styleEqual(c('exact','codon','exon','gene'), 
-                                                   c('#000','#000',pcg_report[['metadata']][['color_palette']][['warning']][['values']][1], pcg_report[['metadata']][['color_palette']][['warning']][['values']][1])))
+                                                   c('#000','#000',pcg_report$settings$conf$visual_reporting$color_palette[['warning']][['values']][1], pcg_report$settings$conf$visual_reporting$color_palette[['warning']][['values']][1])))
 
 
 
@@ -179,12 +179,12 @@ variants_tier1_diagnostic_shared <- crosstalk::SharedData$new(pcg_report[['conte
 crosstalk::bscols(
   list(
     crosstalk::filter_select("CONSEQUENCE", "Consequence", variants_tier1_diagnostic_shared, ~CONSEQUENCE),
-    crosstalk::filter_select("CANCER_TYPE", "Cancer type", variants_tier1_diagnostic_shared, ~CANCER_TYPE),
-    crosstalk::filter_select("CLINICAL_SIGNIFICANCE", "Clinical association", variants_tier1_diagnostic_shared, ~CLINICAL_SIGNIFICANCE)
+    crosstalk::filter_select("BM_CANCER_TYPE", "Cancer type", variants_tier1_diagnostic_shared, ~BM_CANCER_TYPE),
+    crosstalk::filter_select("BM_CLINICAL_SIGNIFICANCE", "Clinical association", variants_tier1_diagnostic_shared, ~BM_CLINICAL_SIGNIFICANCE)
 
   ),
   list(
-    crosstalk::filter_select("EVIDENCE_LEVEL", "Evidence level", variants_tier1_diagnostic_shared, ~EVIDENCE_LEVEL),
+    crosstalk::filter_select("BM_EVIDENCE_LEVEL", "Evidence level", variants_tier1_diagnostic_shared, ~BM_EVIDENCE_LEVEL),
     crosstalk::filter_select("BIOMARKER_MAPPING", "Biomarker mapping", variants_tier1_diagnostic_shared, ~BIOMARKER_MAPPING),
     crosstalk::filter_slider("RATING", "Rating", variants_tier1_diagnostic_shared, ~RATING, min = 0, max = 5, step = 1, ticks = T)
 
@@ -196,7 +196,7 @@ htmltools::br()
 
 DT::datatable(variants_tier1_diagnostic_shared, escape=F, extensions=c("Buttons","Responsive"), 
               options=list(buttons = c('csv','excel'), scrollCollapse=T, dom = 'Bfrtip')) |>
-  DT::formatStyle('EVIDENCE_LEVEL', 
+  DT::formatStyle('BM_EVIDENCE_LEVEL', 
                   backgroundColor = DT::styleEqual(c('A: Validated','A: FDA/NCCN/ELN guidelines',
                                                      'B: Clinical evidence','B1: Clinical evidence: late trials',
                                                      'B2: Clinical evidence: early trials','C: Case study',
@@ -204,7 +204,7 @@ DT::datatable(variants_tier1_diagnostic_shared, escape=F, extensions=c("Buttons"
                                                    c("#009E73","#009E73","#56B4E9", "#56B4E9","#56B4E9","#0072B2","#E69F00", "#F0E442"))) |>
    DT::formatStyle(color="white", "SYMBOL", "BIOMARKER_MAPPING", fontWeight = 'bold', `text-align` = 'center',
                   backgroundColor = DT::styleEqual(c('exact','codon','exon','gene'), 
-                                                   c('#000','#000',pcg_report[['metadata']][['color_palette']][['warning']][['values']][1], pcg_report[['metadata']][['color_palette']][['warning']][['values']][1])))
+                                                   c('#000','#000',pcg_report$settings$conf$visual_reporting$color_palette[['warning']][['values']][1], pcg_report$settings$conf$visual_reporting$color_palette[['warning']][['values']][1])))
 
 
 
